[FIND-97] Prevent time bar range controls from overflowing the container width.
The rows should be inside container-fluids so thier negative margins don't overflow.

Also set full-width on the svg so the graph fills the view.

[rev: alyona.ivanova]

--- a/core/src/main/public/static/css/app-include.css
+++ b/core/src/main/public/static/css/app-include.css
@@ -134,6 +134,10 @@ html, body {
     height: 100%;
 }
 
+.full-width {
+    width: 100%;
+}
+
 .full-height-viewport {
     height: 100vh;
 }
